Version 2.4.0 - The river knows.
----------
201?-??-??

	Stu Redman:
		* Display hashing progress in progress bars
		* Assertion from background thread now prints a message and not just closes the app
		* Backtrace (crash or assertion) is written to logfile

--------------------------------------------------------------------------------

Version 2.3.1 - The "unobvious evil date" version.
----------
2011-11-11

	btkaos:
		* Show if a client shares its file list in client view

	freddy77:
		* Various optimizations of memory usage
		* Access files for reading/writing via mapped memory
		  (with custom exception handling)
		* Fix download of files > 1GB on ucLibc
		* Fix autogen.sh under Ubuntu
		* Fixed TCP obfuscation negotiation

	Gnucco:
		* Add option to ed2k link parser to display links in
		  emulecollection
		* Added test case for the CTag class

	GonoszTopi:
		* Various fixes to new colour code
		* Allow user to select display of transfer rates
		* Extendable list-control settings save/load code
		* Drop assumption that last search keyword is a filename
		  extension if length == 3
		* Instead of counting unicode characters in a Kad search now we
		  use the UTF-8 byte count to determine whether the keyword is
		  allowed or not
		* Use actual page size in mmap calls instead of a randomly
		  selected number
		* Fix custom Crypto++ path not shown by configure
		* Make <IMG> tags in aMuleWeb HTML 4.01 conforming
		* Fix HTTP proxy authentication
		* Use -static for the tests too, when a static binary is
		  requested to prevent configure succeed where compilation
		  would fail
		* Configure now checks only for the tools and libraries needed
		  for the selected components
		* Fix aMuleGUI looking for undefined switches
		* Fix the "blinking" in aMuleGUI's status line
		* Better reporting of Kad tag reading/parsing errors
		* Fix the unittests
		* Some code reorganization
		* Features/fixes ported from eMule: