@@ -6,6 +6,7 @@ Version 2.4.0 - The river knows.
 		* Display hashing progress in progress bars
 		* Assertion from background thread now prints a message and not just closes the app
 		* Backtrace (crash or assertion) is written to logfile
+		* Fix: disabling protocol obfuscation broke Kad and triggered assertions
 
 --------------------------------------------------------------------------------
 
